Google java format wired up